[package]
name = "dl_architecture_vis"
version = "0.1.0"
authors = ["Mark Boss <markboss@mailbox.org>"]

[dependencies]
dl_vis_layout = { version = "0.0.1", path = "dl_vis_layout/" }
dl_vis_render = { version = "0.0.1", path = "dl_vis_render/" }
file_parser = { version = "0.0.1", path = "file_parser/" }